Ask for good messages?

--- a/package.json
+++ b/package.json
@@ -47,6 +47,12 @@
 			"title": "WhiteBoxAudit",
 			"properties": 
 			{
+				"askMessageForGood":
+				{
+					"type": "boolean",
+					"default": "true",
+					"description": "Ask messages for good review"
+				},
 				"goodColor":
 				{
 					"type": "string",
